--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="holder">
+		<div class="item">Box 1</div>
+		<div class="item">Box 2</div>
+		<div class="item">Box 3</div>
+		<div class="item">Box 4</div>
+		<div class="item">Box 5</div>
+		<div class="item">Box 6</div>
+		<div class="item">Box 7</div>
+		<div class="item">Box 8</div>
+		<div class="item">Box 9</div>
+		<div class="item">Box 10</div>
+		<div class="item">Box 11</div>
+		</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
